---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- - kind:
      name: UnpackedListComprehension
      body: Replace unpacked list comprehension with a generator expression
      suggestion: Replace with generator expression
      fixable: true
    location:
      row: 2
      column: 16
    end_location:
      row: 2
      column: 38
    fix:
      content: (fn(x) for x in items)
      location:
        row: 2
        column: 16
      end_location:
        row: 2
        column: 38
    parent: ~
  - kind:
      name: UnpackedListComprehension
      body: Replace unpacked list comprehension with a generator expression
      suggestion: Replace with generator expression
      fixable: true
    location:
      row: 4
      column: 15
    end_location:
      row: 4
      column: 37
    fix:
      content: (fn(x) for x in items)
      location:
        row: 4
        column: 15
      end_location:
        row: 4
        column: 37
    parent: ~
  - kind:
      name: UnpackedListComprehension
      body: Replace unpacked list comprehension with a generator expression
      suggestion: Replace with generator expression
      fixable: true
    location:
      row: 6
      column: 25
    end_location:
      row: 6
      column: 47
    fix:
      content: (fn(x) for x in items)
      location:
        row: 6
        column: 25
      end_location:
        row: 6
        column: 47
    parent: ~
  - kind:
      name: UnpackedListComprehension
      body: Replace unpacked list comprehension with a generator expression
      suggestion: Replace with generator expression
      fixable: true
    location:
      row: 8
      column: 16
    end_location:
      row: 8
      column: 51
    fix:
      content: "([i for i in fn(x)] for x in items)"
      location:
        row: 8
        column: 16
      end_location:
        row: 8
        column: 51
    parent: ~
  - kind:
      name: UnpackedListComprehension
      body: Replace unpacked list comprehension with a generator expression
      suggestion: Replace with generator expression
      fixable: true
    location:
      row: 10
      column: 16
    end_location:
      row: 13
      column: 1
    fix:
      content: "(\n    fn(x)\n    for x in items\n)"
      location:
        row: 10
        column: 16
      end_location:
        row: 13
        column: 1
    parent: ~

